--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ python-telegram-bot==20.7
 groq==0.9.0
 python-dotenv==1.0.0
 requests==2.31.0
-# Pillow==10.2.0  # Comment or remove
+Pillow==10.2.0  # Comment or remove
 aiohttp==3.9.1
 cachetools==5.3.2
