--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-python-telegram-bot==21.7  # Latest stable version
+python-telegram-bot==20.7
 groq==0.9.0
 python-dotenv==1.0.0
 requests==2.31.0
-aiohttp==3.9.1
-cachetools==5.3.2
