--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,8 @@ services:
   - type: web
     name: telegram-bot
     env: python
-    runtime: python
     plan: free
-    buildCommand: |
-      pip install --upgrade pip
-      pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: python main.py
     envVars:
       - key: TELEGRAM_BOT_TOKEN
@@ -15,5 +12,3 @@ services:
         sync: false
       - key: PORT
         value: 10000
-    healthCheckPath: /health
-    autoDeploy: true
