--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-aiogram==3.3.0
-groq==0.4.2
-motor==3.3.2
-pytz==2023.3.post1
-aiohttp==3.9.1
-aiofiles==23.2.1
+aiogram>=3.10.0
+groq>=0.5.0
+motor>=3.3.2
+pytz
+aiohttp
+aiofiles
 Pillow>=10.3.0
-python-dotenv==1.0.0
+python-dotenv
