--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/webhook.py": {
-      "runtime": "python3.10"
+      "runtime": "@vercel/python"
     }
   },
   "routes": [
