--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-aiogram==3.13.1
-groq==0.11.0
-httpx==0.27.2
-aiohttp==3.10.5
-python-dotenv==1.0.1
-pytz==2023.3
+aiogram==3.10.0
+groq==0.9.0
+yt-dlp==2024.8.6
+edge-tts==6.1.12
+duckduckgo_search==6.2.13
+motor==3.5.1
+dnspython==2.6.1
+aiohttp==3.9.5
+aiofiles==24.1.0
+pytz==2024.1
 apscheduler==3.10.4
+python-dotenv==1.0.1
