--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ groq==0.9.0
 yt-dlp==2024.8.6
 edge-tts==6.1.12
 duckduckgo_search==6.2.13
-motor==3.5.1
+motor==3.6.0
+pymongo==4.8.0
 dnspython==2.6.1
 aiohttp==3.9.5
 aiofiles==23.2.1
