--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-aiogram==3.3.0
-groq==0.4.2
-aiohttp==3.9.1
-pytz==2023.3.post1
-apscheduler==3.10.4
-pillow==10.1.0
-pydub==0.25.1
-SpeechRecognition==3.10.0
-python-dotenv==1.0.0
+aiogram>=3.3.0
+groq>=0.4.2
+aiohttp>=3.9.1
+pytz>=2023.3.post1
+apscheduler>=3.10.4
+Pillow>=10.2.0
+pydub>=0.25.1
+SpeechRecognition>=3.10.0
+python-dotenv>=1.0.0
